Project

General

Profile

Bug #36500

[rbd-mirror] periodic mirror status timer might fail to be scheduled

Added by Jason Dillaman over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Mirror image status of some images remains outdated for indefinite time
(status of xyz9 and xyz10 here depicts that xyz9's status has not been updated for too long)

xyz9:
  global_id:   aa8c6814-c4ba-4ad6-a770-abca58aefbcf
  state:       up+replaying
  description: replaying, master_position=[object_number=3, tag_tid=1, entry_tid=7], mirror_position=[], entries_behind_master=7
  last_update: 2018-10-17 15:48:09
xyz10:
  global_id:   618ef890-c376-4822-a688-50d11347989f
  state:       up+replaying
  description: replaying, master_position=[object_number=1, tag_tid=2, entry_tid=1], mirror_position=[object_number=1, tag_tid=2, entry_tid=1], entries_behind_master=0
  last_update: 2018-10-17 17:13:40

Looking at a gcore of the affected process, the ImageReplayer instance is in a health state replaying but there is no timer event scheduled for updating the status.


Related issues

Copied to rbd - Backport #36554: luminous: [rbd-mirror] periodic mirror status timer might fail to be scheduled Resolved
Copied to rbd - Backport #36555: mimic: [rbd-mirror] periodic mirror status timer might fail to be scheduled Resolved

History

#1 Updated by Jason Dillaman over 5 years ago

  • Description updated (diff)

#2 Updated by Jason Dillaman over 5 years ago

  • Status changed from In Progress to Fix Under Review

#3 Updated by Mykola Golub over 5 years ago

  • Status changed from Fix Under Review to Pending Backport

#4 Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36554: luminous: [rbd-mirror] periodic mirror status timer might fail to be scheduled added

#5 Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36555: mimic: [rbd-mirror] periodic mirror status timer might fail to be scheduled added

#6 Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved

Also available in: Atom PDF