rbd-mirror: always attempt to restart canceled status update task

Fixes: http://tracker.ceph.com/issues/36500
Signed-off-by: Jason Dillaman <dillaman@redhat.com>